# signalsaurus

./: LICENSE  mkdocs.yml  pyproject.toml
docs/: index.md
src/signalsaurus/: __init__.py  signalsaurus.py
tests/: test_signalsaurus.py
